[package]
name = "virtual_hid"
version = "0.1.0"
authors = ["Andrew Gilbrough <andrew@gilbrough.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.*", features=["derive"]}
tokio = {version = "1.12.*", features=["net", "sync", "io-util", "rt"]}
tokio-serde = {version = "0.8.*", features=["bincode"]}
tokio-util = {version = "0.6.*", features=["codec"]}
tokio-stream = {version = "0.1.7"}
bytes = "1.1.*"
futures-util = {version = "0.3.*", features=["sink"]}